kubernetes/cluster/default/blocky/blocky.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blocky
  labels:
    app.kubernetes.io/name: blocky
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: blocky
  serviceName: blocky
  updateStrategy: 
    type: RollingUpdate
  podManagementPolicy: Parallel
  minReadySeconds: 60
  revisionHistoryLimit: 2
  replicas: 2
  template:
    metadata:
      annotations: {}
      labels:
        app.kubernetes.io/name: blocky
    spec:
      restartPolicy: Always
      containers:
        - name: blocky
          image: registry.brhd.io/ghcr.io/0xerr0r/blocky:v0.35.0
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args: 
            - --config 
            - ./config/
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            # The actual memory and CPU usage is much lower, however ample memory
            # is required to load block lists and avoid OOMKill errors.
            limits:
              memory: 500Mi
          ports:
            - name: dns-tcp
              protocol: TCP
              containerPort: 53
            - name: dns-udp
              protocol: UDP
              containerPort: 53
            - name: http
              protocol: TCP
              containerPort: 4000
          volumeMounts:
            - name: blocky-config
              mountPath: /app/config
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: dns-tcp
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 1
            failureThreshold: 5
      volumes:
        - name: blocky-config
          projected:
            sources:
              - configMap:
                  name: blocky-config
              - configMap:
                  name: blocky-omada-customdns
              - configMap:
                  name: blocky-omada-clientlookup
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - blocky
              topologyKey: kubernetes.io/hostname
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - blocky
              topologyKey: topology.kubernetes.io/zone
