kubernetes/cluster/default/blocky/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blocky
  namespace: default
  labels:
    app.kubernetes.io/name: blocky
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: dns.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /dns-query
            backend:
              service:
                name: blocky
                port:
                  number: 4000
  tls:
    - hosts:
        - dns.brhd.io
